<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/postListFragment"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/profileListFragment"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/profiles" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile_24dp"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/pictureSelectFragment"
        android:icon="@drawable/ic_post_24dp"
        android:title="@string/title_post" />

    <item
        android:id="@+id/mapsFragment"
        android:icon="@drawable/ic_maps_24dp"
        android:title="@string/title_maps" />

</menu>
